// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /files Files_200 1`] = `
Object {
  "data": Array [
    Object {
      "createdAt": Any<String>,
      "id": 1,
      "name": "fichier",
      "path": "S10",
      "size": 150,
      "type": "john.doe@enib.fr",
      "updatedAt": Any<String>,
    },
  ],
  "length": 1,
  "max": 1,
  "page": 1,
}
`;

exports[`GET /files/:id Files_200 1`] = `
Object {
  "createdAt": Any<String>,
  "id": Any<Number>,
  "internship": null,
  "name": "fichier",
  "path": "S10",
  "size": 150,
  "type": "john.doe@enib.fr",
  "updatedAt": Any<String>,
}
`;

exports[`GET /files/:id/internships Files_200_WithLinkedData 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": 1,
  "isInternshipAbroad": true,
  "isValidated": false,
  "postalCode": "29280",
  "startAt": 20191012,
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`POST /files ValidFiles_200 1`] = `
Object {
  "createdAt": Any<String>,
  "id": Any<Number>,
  "name": "fichier",
  "path": "S10",
  "size": "150",
  "type": "john.doe@enib.fr",
  "updatedAt": Any<String>,
}
`;

exports[`POST /files/:id/internships/:internship_id/link Files_200_WithBusiness 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": 2,
  "isInternshipAbroad": true,
  "isValidated": false,
  "postalCode": "29280",
  "startAt": 20191012,
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /files/:id Files_200_NotAnyDataUpdated 1`] = `
Object {
  "createdAt": Any<String>,
  "id": Any<Number>,
  "name": "fichier",
  "path": "S10",
  "size": 150,
  "type": "john.doe@enib.fr",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /files/:id Files_200_UpdateAllData 1`] = `
Object {
  "createdAt": Any<String>,
  "id": Any<Number>,
  "name": "fichier",
  "path": "S10",
  "size": "250",
  "type": "john.doe@enib.fr",
  "updatedAt": Any<String>,
}
`;
